--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,20 +1,20 @@
 ---
-import NavbarMobile from './navbar-mobile';
+import NavbarMobile from '../components/navbar-mobile';
 
 const navigation = [
     {name: "Home", href: "/"},
     {name: "Members", href: "/members"},
-    {name: "Documentation", href: "/documentation"},
+    {name: "Albums", href: "/albums"},
     {name: "Projects", href: "/projects"},
     {name: "Schedule", href: "/schedule"},
     {name: "Lecturers", href: "/lecturers"},
 ];
 const pathname = Astro.url.pathname;
 ---
-<header class="sticky top-0 z-50 w-full border-b bg-background/95 backdrop-blur supports-[backdrop-filter]:bg-background/60">
-    <div class="container flex h-16 items-center justify-between">
+<header class="fixed top-4 z-50 w-full items-center flex px-4">
+    <div class="mx-auto w-full md:w-auto justify-between inline-flex px-6 h-16 items-center gap-8 border bg-background/95 backdrop-blur supports-[backdrop-filter]:bg-background/60 rounded-4xl">
         <div class="flex items-center gap-2">
-            <a href="/" class="font-bold text-xl">
+            <a href="/" class="font-bold text-xl text-primary">
                 TERPAL B 24
             </a>
         </div>
