--- a/src/pages/albums/index.astro
+++ b/src/pages/albums/index.astro
@@ -5,6 +5,7 @@ import {getCollection} from "astro:content";
 import {Image} from "astro:assets";
 import {Badge} from "@/components/ui/badge";
 import {CalendarHeartIcon, MapPin} from "lucide-react";
+import {renderDate} from "../../lib/date";
 
 const albums = await getCollection("album");
 ---
@@ -18,32 +19,29 @@ const albums = await getCollection("album");
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-            {albums.map(({data}) => (
-                    <Card className="overflow-hidden p-0 shadow-none">
-                        <div class="aspect-video overflow-hidden">
-                            <Image
-                                    src={data.cover}
-                                    alt={`Foto ${data.title}`}
-                                    class="object-cover w-full h-full"
-                            />
-                        </div>
-                        <CardHeader className="px-6 pb-6 space-y-2">
-                            <CardTitle className="text-lg">{data.title}</CardTitle>
-                            <div class="flex items-center gap-2 flex-wrap">
-                                <Badge variant="secondary">
-                                    <MapPin/>
-                                    {data.location}</Badge>
-                                <Badge variant="secondary">
-                                    <CalendarHeartIcon/>
-                                    {data.date.toLocaleDateString("en-US", {
-                                        weekday: "short",
-                                        year: "numeric",
-                                        month: "long",
-                                        day: "numeric",
-                                    })}</Badge>
+            {albums.map(({id, data}) => (
+                    <a href={`/albums/${id}`} class="group">
+                        <Card className="overflow-hidden p-0 shadow-none group-hover:bg-muted">
+                            <div class="aspect-video overflow-hidden">
+                                <Image
+                                        src={data.cover}
+                                        alt={`Foto ${data.title}`}
+                                        class="object-cover w-full h-full group-hover:scale-125 group-hover:rotate-2 transition-transform"
+                                />
                             </div>
-                        </CardHeader>
-                    </Card>
+                            <CardHeader className="px-6 pb-6 space-y-2">
+                                <CardTitle className="text-lg text-primary">{data.title}</CardTitle>
+                                <div class="flex items-center gap-2 flex-wrap">
+                                    <Badge variant="secondary">
+                                        <MapPin/>
+                                        {data.location}</Badge>
+                                    <Badge variant="secondary">
+                                        <CalendarHeartIcon/>
+                                        {renderDate(data.date)}</Badge>
+                                </div>
+                            </CardHeader>
+                        </Card>
+                    </a>
             ))}
         </div>
     </div>
