Fix some mobile responsive css

--- a/src/pages/albums/[slug]/index.astro
+++ b/src/pages/albums/[slug]/index.astro
@@ -30,7 +30,7 @@ const {Content} = await render(album);
             <div class="mx-auto max-w-[700px] text-muted-foreground">
                 <Content/>
             </div>
-            <div class="flex items-center gap-2">
+            <div class="flex items-center gap-2 flex-wrap justify-center">
                 <Badge variant="secondary">
                     <MapPin/>
                     {data.location}</Badge>
