--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,10 +17,10 @@ import CardSquareImage from "../components/CardSquareImage.astro";
         {/* Hero section */}
         <section class="w-full py-6">
             <div class="container px-4 md:px-6 space-y-6">
-                <div class="flex flex-col items-center p-16 space-y-4 text-center">
+                <div class="flex flex-col items-center px-4 py-12 md:p-16 space-y-4 text-center">
                     <div class="space-y-6">
                         <div class="flex gap-4 items-center justify-center">
-                            <Image src={Poltek} alt="Batam State Polytechnic Logo" class="h-24 w-auto"/>
+                            <Image src={Poltek} alt="Batam State Polytechnic Logo" class="h-20 w-auto"/>
                             <img src="/favicon.png" alt="TRPL" class="h-20"/>
                         </div>
 
@@ -31,7 +31,7 @@ import CardSquareImage from "../components/CardSquareImage.astro";
                             Software Engineering Technology Class at Batam State Polytechnic
                         </p>
                     </div>
-                    <div class="space-x-4">
+                    <div class="flex items-center justify-center gap-4 flex-wrap">
                         <Link href="/members">
                             Our Members
                             <ArrowRight className="h-4 w-4"/>
