--- a/src/pages/members/index.astro
+++ b/src/pages/members/index.astro
@@ -26,7 +26,7 @@ members.sort((a, b) => (a.data.isLeader === b.data.isLeader) ? 0 : a.data.isLead
                     <Card className="overflow-hidden shadow-none p-0">
                         <div class="aspect-square relative">
                             <Image src={data.photo} alt={data.name}
-                                   class="object-cover w-full h-full"/>
+                                   class="object-cover w-full h-full aspect-square"/>
                         </div>
                         <CardHeader className="px-6 pb-6 space-y-2">
                             <CardTitle className="text-lg text-primary font-bold">{data.name}</CardTitle>
