--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import {Image} from 'astro:assets';
-import Hero from "../assets/hero.jpeg";
+import Hero from "../assets/hero.jpg";
 import Layout from '../layouts/Layout.astro';
 import {ArrowRight} from "lucide-react";
 import {Link} from "@/components/link";
 import Poltek from "../assets/poltek.png";
-import DN from "../assets/dn.jpeg";
+import ATS from "../assets/ats.jpg";
 import Collaborative from "../assets/illustration/collaborative.jpeg";
 import Practical from "../assets/illustration/practical.jpeg";
 import Industry from "../assets/illustration/industry.jpeg";
@@ -48,7 +48,7 @@ import CardSquareImage from "../components/CardSquareImage.astro";
                                class="object-cover object-center w-full h-full hover:scale-125 transition-transform hover:-rotate-2"/>
                     </figure>
                     <figure class="aspect-video w-full rounded-3xl overflow-hidden">
-                        <Image src={DN} alt="Our class"
+                        <Image src={ATS} alt="Our class"
                                class="object-cover object-center w-full h-full hover:scale-125 transition-transform hover:rotate-2"/>
                     </figure>
                 </div>
