--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,8 +28,17 @@ import CardSquareImage from "../components/CardSquareImage.astro";
                             Welcome to TERPAL B 24
                         </h1>
                         <p class="mx-auto max-w-[700px] md:text-xl text-muted-foreground">
-                            Software Engineering Technology Class at Batam State Polytechnic
-                        </p>
+                            Software Engineering Class Part of{' '}
+                            <a
+                              href="https://if.polibatam.ac.id/teknologi-rekayasa-perangkat-lunak/"
+                              class="hover:opacity-75 transition-opacity duration-200"
+                              target="_blank"
+                              rel="noopener noreferrer"
+                            >
+                              <strong>Prodi TRPL Polibatam</strong>
+                            </a>
+                          </p>
+                          
                     </div>
                     <div class="flex items-center justify-center gap-4 flex-wrap">
                         <Link href="/members">
