Add notion page

--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -8,6 +8,7 @@ const navigation = [
     {name: "Projects", href: "/projects"},
     {name: "Schedule", href: "/schedule"},
     {name: "Lecturers", href: "/lecturers"},
+    {name: "Notion", href: "/notion"},
 ];
 const pathname = Astro.url.pathname;
 ---
