--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,12 @@ import Collaborative from "../assets/illustration/collaborative.jpeg";
 import Practical from "../assets/illustration/practical.jpeg";
 import Industry from "../assets/illustration/industry.jpeg";
 import CardSquareImage from "../components/CardSquareImage.astro";
+
+import { Swiper, SwiperSlide } from 'swiper/react';
+import { Autoplay } from 'swiper/modules';
+import 'swiper/css';
+import 'swiper/css/autoplay';
+import ReminderSlider from '../components/ui/ReminderSlider.tsx';
 ---
 
 <Layout>
@@ -66,21 +72,8 @@ import CardSquareImage from "../components/CardSquareImage.astro";
 
         {/* Announcement section */}
         <section class="w-full bg-yellow-50 py-8 mt-6 md:py-12 border-y border-yellow-300">
-            <div class="container px-4 md:px-6 text-center space-y-6">
-                <h2 class="text-3xl md:text-4xl font-bold text-yellow-800">📢 Reminder</h2>
-                <div class="mx-auto max-w-3xl text-yellow-900 text-lg md:text-xl space-y-4">
-                <p>
-                    Jangan lupa hari ini, <strong>Jumat, 9 Mei 2025</strong> ada ujian <strong>ATS PBD</strong> dan <strong>B.INA</strong>!
-                </p>
-                <a 
-                    href="https://learning-if.polibatam.ac.id/mod/quiz/view.php?id=6503"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="inline-block bg-yellow-600 hover:bg-yellow-700 text-white font-semibold py-3 px-6 rounded-full transition-colors duration-200 shadow-md"
-                >
-                    🔗 Kerjakan ATS Bahasa Indonesia
-                </a>
-                </div>
+            <div class="container px-4 md:px-6">
+                <ReminderSlider client:load />
             </div>
         </section>
 
